# ktp-active

./: .gitignore  .reviewboardrc  CMakeLists.txt  README
application/: CMakeLists.txt  active-ktp.desktop  ktp-active.desktop
application/icons/: hisc-apps-active-ktp.svgz
application/package/: ktp-active.qmlproject  metadata.desktop
application/package/contents/ui/: Dialog.qml  MainToolbar.qml  MainView.qml  ktp-active.qmlproject  main.qml
application/package/contents/ui/Accounts/: AccountList.qml  AccountListDelegate.qml  AccountView.qml  ToolBar.qml
application/package/contents/ui/Chat/: ActiveChatItemDelegate.qml  Bubble.qml  Chat.qml  ChatContainer.qml  ChatMessageDelegate.qml  ChatToolbar.qml  ChatView.qml  DesktopTheme.qml  Header.qml  actionDelegate.qml  messageDelegate.qml
application/package/contents/ui/Chats/: ActiveChats.qml  Chat.qml  ChatContainer.qml  ChatMessageDelegate.qml
application/package/contents/ui/Contacts/: ContactGroup.qml  ContactItemDelegate.qml  ContactsList.qml  ContactsListDelegate.qml  ContactsSectionDelegate.qml  ContactsSidebar.qml  ContactsView.qml  Group.qml  GroupBody.qml  GroupHead.qml  GroupHeaderDelegate.qml  SidebarDelegate.qml
application/package/contents/ui/Sidebar/: ActiveChatDrawer.qml  MenuSidebar.qml
application/package/contents/ui/Toolbar/: StatusPicker.qml  Toolbar.qml  ToolbarContent.qml
application/package/contents/ui/Toolbars/: MainToolbar.qml  MenuSidebar.qml  StatusPicker.qml
application/src/: CMakeLists.txt  activeIM.cpp  activeIM.h  main.cpp
